Fixing text and likes overlapping

--- a/web_flask/static/styles/read_post.css
+++ b/web_flask/static/styles/read_post.css
@@ -42,10 +42,9 @@ section h3 {
   text-underline-offset: 8px;
 }
 
-.user-comments p{
+.user-comments p {
   padding-block-start: 5px;
 }
-
 
 .user-comments {
   margin-bottom: 5px;
@@ -97,7 +96,6 @@ a {
 }
 #lkes-and-comments-container {
   display: flex;
-  font-size: 1.3em;
   gap: 1em;
 }
 #post-comment {
@@ -239,7 +237,8 @@ a {
 }
 
 @media (200px <= width <= 768px) {
-  #post-comment, #post-question {
+  #post-comment,
+  #post-question {
     font-size: 13pt;
   }
   #read-post-container h2 {
